--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -24,7 +24,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: rgb(255, 255, 255);
+    background: rgba(255, 255, 255, 0.504);
     backdrop-filter: blur(15px);
     -webkit-backdrop-filter: blur(15px);
     border: 1px solid rgba(255, 255, 255, 0.2);
@@ -56,4 +56,26 @@ a {
     background: transparent;
     border: none;
     padding: 10px;
+}
+
+@media (max-width: 768px) {
+    .header {
+    width: 100%;
+    margin-left: 0;
+    border-radius: 0px;
+    border-bottom-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+    margin-top: 0;
+    
+}
+
+.logo{
+    
+    font-size: 18px;
+}
+
+.buttons {
+    display: flex;
+    gap: 0px;
+}
 }
