--- a/src/components/support/support.css
+++ b/src/components/support/support.css
@@ -33,20 +33,13 @@
   color: #6c7275;
 }
 
-@media (max-width: 1072px) {
+@media (max-width: 768px) {
   .card {
-    padding: 20px;
+    width: 90%;
+  } 
+  .cardBoxList {
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
   }
-
-  .card > h3 {
-    font-size: 18px;
-  }
-
-  .card > p {
-    font-size: 13px;
-  }
-}
-
-.cardBoxList {
-  gap: 15px;
 }
