--- a/src/pages/shoppage/Shoppage.css
+++ b/src/pages/shoppage/Shoppage.css
@@ -43,3 +43,26 @@
   margin: 80px auto;
   text-align: center;
 }
+
+@media (max-width: 768px) {
+  .shopBox {
+    height: 300px;
+  }
+
+  .shopPage {
+    font-size: 32px;
+  }
+
+  .miniShopPage {
+    font-size: 16px;
+    padding: 0 20px;
+  }
+
+  .shopPageBtn {
+    width: 150px;
+    height: 40px;
+    font-size: 14px;
+    padding: 6px 30px;
+    margin: 60px auto;
+  }
+}
